--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       
       <picture>
         <source media="(max-width: 375px)" srcset="images/image-product-mobile.jpg">
-        <img src="images/image-product-desktop.jpg" width="600" height="450" >
+        <img src="images/image-product-desktop.jpg" width="600" height="450" alt="Imagem do perfume da Gabrielle chanel paris" >
       </picture>
     </div>
    
